--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@discordjs/rest": "^0.5.0",
     "discord-api-types": "^0.34.0",
-    "discord.js": "^13.8.0",
+    "discord.js": "13.8.0",
     "dotenv": "^16.0.1",
     "mysql2": "^2.3.3",
     "pino": "^8.1.0",
