--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rolebot",
+  "name": "beefyne",
   "author": "Javahound",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "dependencies": {
     "@discordjs/rest": "^0.5.0",
@@ -11,6 +11,7 @@
     "mysql2": "^2.3.3",
     "pino": "^8.1.0",
     "pino-debug": "^2.0.0",
+    "pino-multi-stream": "^6.0.0",
     "pino-pretty": "^8.1.0",
     "typeorm": "^0.3.6",
     "yup": "^0.32.11"
